[BE][Task]API seach employee no organization (#71)
* seach employee no organization

* change path

* tao rswag

* fix rspec

* fix rspec 2

* fix cm

* sua path

* add swagger

* add helper

* fix ci

* fix cm

* fix cm

* remove to model

* fix cm

* fix cm

* fix cm

* sua cm

* del sub_tree_of

* del sub_tree_of

* rebase code
